# ai

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py
backend/app/jobs/: tasks.py  worker.py
backend/app/models/: __init__.py  case.py  contact.py  user.py
backend/app/schemas/: __init__.py  case.py  contact.py  user.py
backend/tests/: test_contact.py
frontend/: next.config.ts  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(marketing)/blog/: page.tsx
frontend/src/app/(marketing)/blog/posts/: hello.mdx
frontend/src/app/(marketing)/datenschutz/: page.tsx
frontend/src/app/(marketing)/impressum/: page.tsx
frontend/src/app/(marketing)/kontakt/: page.tsx
frontend/src/app/(marketing)/leistungen/: page.tsx
frontend/src/app/(marketing)/preise/: page.tsx
frontend/src/app/(marketing)/referenzen/: page.tsx
frontend/src/components/ui/: Button.tsx  ContactForm.tsx  Input.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts
frontend/src/tests/: api.test.ts  contactform.test.tsx  home.test.tsx
infra/: Caddyfile
